# local_mcp_manager

./: .gitignore  README.md  local_mcp_manager_core.py  local_mcp_manager_flask.py  mcp_conf.example.json  pyproject.toml
docs/: README_CN.md  ~$示意图.pptx  示意图.pptx
static/css/: _json.css  _mcp_info.css  _user_edit.css  _user_info.css  basic_tabs.css  buttons.css  index.css
static/js/: _json.js
templates/: _mcp_chat.html  _mcp_edit.html  _mcp_edit_service.html  _mcp_edit_unified.html  _mcp_info.html  _settings.html  index.html
